--- a/src/main/resources/templates/enroll.html
+++ b/src/main/resources/templates/enroll.html
@@ -7,7 +7,7 @@
 <th:block layout:fragment="customContents">
 
   <div class="alert alert-info" role="alert">
-    사원 등록
+    <h3>사원 등록</h3>
   </div>
 
   <div>
@@ -33,11 +33,12 @@
 
     <label for="staffPhone" class="form-label">전화번호를 입력하세요</label>
     <div class="input-group mb-3">
-      <span class="input-group-text">000-0000-0000</span>
+      <span class="input-group-text">010-0000-0000</span>
       <input type="text" class="form-control" id="staffPhone" name="staffPhone">
     </div>
 
     <button type="submit" class="btn btn-primary">등록하기</button>
+    <button type="button" onclick="location.href='/'" class="btn btn-info">사원 리스트 이동</button>
   </form>
 
   <script>
