--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -7,14 +7,10 @@
 <th:block layout:fragment="customContents">
 
   <div class="alert alert-info" role="alert">
-    사원 정보 수정
+    <h3>사원 정보 수정</h3>
   </div>
 
-  <div>
-    사원 정보를 수정하세요.
-  </div>
-
-  <form th:action="@{enroll/staff}" method="post" onsubmit="return staffEnroll();">
+  <form th:action="@{target/staff}" method="post" onsubmit="return staffModify();">
     <th:block th:each="t : ${targetStaff}">
 
       <div class="input-group mb-3">
@@ -40,11 +36,12 @@
 
       <label for="staffPhone" class="form-label">전화번호를 입력하세요</label>
       <div class="input-group mb-3">
-        <span class="input-group-text">000-0000-0000</span>
+        <span class="input-group-text">010-0000-0000</span>
         <input type="text" class="form-control" id="staffPhone" name="staffPhone" th:value="${t.staffPhone}">
       </div>
     </th:block>
-    <button type="submit" class="btn btn-primary">등록하기</button>
+
+    <button type="submit" class="btn btn-info">수정하기</button>
   </form>
 
   <script>
@@ -52,21 +49,21 @@
       var staffCode = $('#staffCode');
       var staffEmail = $('#staffEmail');
       var staffPhone = $('#staffPhone');
-      var codeCheck = /[0-9]{3}$/;
+      var codeCheck = /^[0-9]{3}$/;
       var emailCheck = /^[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}$/i;
       var phoneCheck = /^01([0|1|6|7|8|9]?)-?([0-9]{3,4})-?([0-9]{4})$/;
 
 
-        staffCode.change(function () {
+        staffCode.blur(function () {
           var codeCheckTarget = staffCode.val();
           if (codeCheck.test(codeCheckTarget) == false) {
-            alert("유효한 이메일 주소를 입력하세요");
+            alert("유효한 사원 코드를 입력하세요");
             staffCode.val('');
             return;
           }
         })
 
-        staffEmail.change(function () {
+        staffEmail.blur(function () {
           var emailCheckTarget = staffEmail.val();
           if (emailCheck.test(emailCheckTarget) == false) {
             alert("유효한 이메일 주소를 입력하세요");
@@ -75,7 +72,7 @@
           }
         });
 
-        staffPhone.change(function () {
+        staffPhone.blur(function () {
           var phoneCheckTarget = staffPhone.val();
           if (phoneCheck.test(phoneCheckTarget) == false) {
             alert("유효한 휴대폰 번호를 입력하세요");
@@ -84,9 +81,31 @@
           }
         });
 
+      $.ajax({
+        url: '/modify/staff/code',
+        data: {staffCode: staffCode.val()},
+        dataType: "json",
+        type: 'get',
+        success: function (data) {
+          if (data == true) {
+            staffCode.blur(function () {
+              alert("이미 사용 중인 사원 코드입니다. 다른 코드로 입력하세요.");
+              staffCode.val('');
+              return;
+            });
+          }
+        },
+        error: function () {
+          staffCode.focus();
+          staffCode.val('');
+          alert('유효한 값이 아닙니다.');
+        }
+      });
+
     });
 
-    function staffEnroll() {
+    function staffModify() {
+      var staffCode = $('#staffCode');
       var staffName = $('#staffEmail');
       var staffGrade = $('#staffGrade');
       var staffEmail = $('#staffEmail');
@@ -94,6 +113,9 @@
 
       if(staffName.value == '') {
         alert("사원명이 입력되지 않았습니다.");
+        return false;
+      }else if(staffCode.value == '') {
+        alert("사원 코드가 입력되지 않았습니다.");
         return false;
       }else if(staffGrade.value == '') {
         alert("사원 직급이 입력되지 않았습니다.");
