--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,7 +12,7 @@
             <form action="/excel/download" method="get">
                 <button type="submit" class="btn btn-success">Excel Download</button>
             </form>
-            <button type="submit" onclick="location.href='/enroll'" class="btn btn-warning">새로운 직원 등록하기</button>
+            <button type="button" onclick="location.href='/enroll'" class="btn btn-warning">새로운 사원 등록하기</button>
         </div>
     </div>
 
@@ -55,6 +55,7 @@
         </select>
         <input type="text" name = "searchValue">
         <button type="submit" class="btn btn-primary btn-sm">검색</button>
+        <button type="button" onclick="location.href='/'" class="btn btn-link">검색 결과 초기화</button>
     </form>
 
 </th:block>
