3rd commit - 뒤로 가기 이슈를 제외하면 완성

--- a/src/main/resources/templates/enroll.html
+++ b/src/main/resources/templates/enroll.html
@@ -69,21 +69,21 @@
     });
 
     function staffEnroll() {
-      var staffName = $('#staffEmail');
-      var staffGrade = $('#staffGrade');
-      var staffEmail = $('#staffEmail');
-      var staffPhone = $('#staffPhone');
+      var staffEnrollName = $('#staffName');
+      var staffEnrollGrade = $('#staffGrade');
+      var staffEnrollEmail = $('#staffEmail');
+      var staffEnrollPhone = $('#staffPhone');
 
-      if(staffName.value == '') {
+      if(staffEnrollName.val() == '') {
         alert("사원명이 입력되지 않았습니다.");
         return false;
-      }else if(staffGrade.value == '') {
+      }else if(staffEnrollGrade.val() == '') {
         alert("사원 직급이 입력되지 않았습니다.");
         return false;
-      }else if(staffEmail.value == '') {
+      }else if(staffEnrollEmail.val() == '') {
         alert("이메일이 입력되지 않았습니다.");
         return false;
-      }else if(staffPhone.value == '') {
+      }else if(staffEnrollPhone.val() == '') {
         alert("전화번호가 입력되지 않았습니다.");
         return false;
       }else{
