--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -42,9 +42,10 @@
     </th:block>
 
     <button type="submit" class="btn btn-info">수정하기</button>
+    <button type="submit" class="btn btn-light">사원 리스트로 돌아가기</button>
   </form>
 
-  <script>
+  <script th:inline="javascript">
     $(function() {
       var staffCode = $('#staffCode');
       var staffEmail = $('#staffEmail');
@@ -53,8 +54,7 @@
       var emailCheck = /^[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}$/i;
       var phoneCheck = /^01([0|1|6|7|8|9]?)-?([0-9]{3,4})-?([0-9]{4})$/;
 
-
-        staffCode.blur(function () {
+        staffCode.change(function () {
           var codeCheckTarget = staffCode.val();
           if (codeCheck.test(codeCheckTarget) == false) {
             alert("유효한 사원 코드를 입력하세요");
@@ -63,7 +63,7 @@
           }
         })
 
-        staffEmail.blur(function () {
+        staffEmail.change(function () {
           var emailCheckTarget = staffEmail.val();
           if (emailCheck.test(emailCheckTarget) == false) {
             alert("유효한 이메일 주소를 입력하세요");
@@ -72,59 +72,45 @@
           }
         });
 
-        staffPhone.blur(function () {
+        staffPhone.change(function () {
           var phoneCheckTarget = staffPhone.val();
           if (phoneCheck.test(phoneCheckTarget) == false) {
             alert("유효한 휴대폰 번호를 입력하세요");
             staffPhone.val('');
             return;
           }
+
         });
-
-      $.ajax({
-        url: '/modify/staff/code',
-        data: {staffCode: staffCode.val()},
-        dataType: "json",
-        type: 'get',
-        success: function (data) {
-          if (data == true) {
-            staffCode.blur(function () {
-              alert("이미 사용 중인 사원 코드입니다. 다른 코드로 입력하세요.");
-              staffCode.val('');
-              return;
-            });
-          }
-        },
-        error: function () {
-          staffCode.focus();
-          staffCode.val('');
-          alert('유효한 값이 아닙니다.');
-        }
-      });
-
     });
 
     function staffModify() {
-      var staffCode = $('#staffCode');
-      var staffName = $('#staffEmail');
-      var staffGrade = $('#staffGrade');
-      var staffEmail = $('#staffEmail');
-      var staffPhone = $('#staffPhone');
+      var staffModifyCode = $('#staffCode');
+      var staffModifyName = $('#staffName');
+      var staffModifyGrade = $('#staffGrade');
+      var staffModifyEmail = $('#staffEmail');
+      var staffModifyPhone = $('#staffPhone');
+      var allStaffCode = [[${allStaffCode}]];
+      var targetPrimaryCode = [[${targetPrimaryCode}]];
+      console.log(targetPrimaryCode);
 
-      if(staffName.value == '') {
+      if(staffModifyName.val() == '') {
         alert("사원명이 입력되지 않았습니다.");
         return false;
-      }else if(staffCode.value == '') {
+      }else if(staffModifyCode.val() == '') {
         alert("사원 코드가 입력되지 않았습니다.");
         return false;
-      }else if(staffGrade.value == '') {
+      }else if(staffModifyGrade.val() == '') {
         alert("사원 직급이 입력되지 않았습니다.");
         return false;
-      }else if(staffEmail.value == '') {
+      }else if(staffModifyEmail.val() == '') {
         alert("이메일이 입력되지 않았습니다.");
         return false;
-      }else if(staffPhone.value == '') {
+      }else if(staffModifyPhone.val() == '') {
         alert("전화번호가 입력되지 않았습니다.");
+        return false;
+      }else if(allStaffCode.includes(staffModifyCode.val())
+              && targetPrimaryCode != staffModifyCode.val()) {
+        alert("입력한 사원 코드는 이미 사용중입니다.");
         return false;
       }else{
         return true;
